tests/Semantic/test_2_r10.out
Error type 10 at Line 17: indexing on non-array variable
